# PersonalSI339

./: README.md  index.html  lscount  project.html  pyproject.toml  requirements.txt
css/: projects.css  reset.css  style.css
genweb/: __main__.py
genweb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
html/: index.html
html/projects/: index.html
portfolio/: config.json
portfolio/html/: index.html
portfolio/html/projects.html/: index.html
portfolio/static/css/: style.css
portfolio/templates/: index.html  projects.html
projects/: index.html
